@@ -19,6 +19,7 @@ dependencies {
     implementation(libs.arrow.memory)
     implementation(libs.commonsCompress)
     implementation(libs.kotlin.reflect)
+    implementation(libs.kotlin.datetimeJvm)
 
     testApi(project(":core"))
     testImplementation(libs.junit)
@@ -38,4 +39,8 @@ kotlinPublications {
 
 kotlin {
     explicitApi()
+}
+
+tasks.test {
+    jvmArgs = listOf("--add-opens", "java.base/java.nio=ALL-UNNAMED")
 }
